bdr.BDR2.scala.error
Erreur de compilation :
BDR2:1: error: not found: value lireMessage
var mess = lireMessage()
           ^BDR2:6: error: not found: value lireMessage
    mess = lireMessage()
           ^